# tensorflow

./: meson.build  meson.build-build_from_sources  tensorflow_build.sh
devialet/: README.md
devialet/binaries/: README.md
devialet/build_scripts/host_linux_x86_64/: README.md  build_all.sh  build_arch.sh
